labs/5-traffic-management/lab3/vs-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  http:
  - match:
    - headers:
        end-user:
          exact: $USER_NAMESPACE
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 7s
    route:
    - destination:
        host: ratings
        subset: v2-mysql
  - route:
    - destination:
        host: ratings
        subset: v2-mysql
